[gd_scene load_steps=26 format=3 uid="uid://r7wouctlfokv"]

[ext_resource type="Texture2D" uid="uid://ch5shkxvjnhvv" path="res://Assets/Backgrounds/Map below.png" id="1_q0mm3"]
[ext_resource type="Texture2D" uid="uid://tfpqn0pkj10n" path="res://Assets/Backgrounds/Above Map.png" id="2_np2xp"]
[ext_resource type="Script" uid="uid://bdcdlen21e5i4" path="res://Scripts/alice.gd" id="2_p3ir5"]
[ext_resource type="PackedScene" uid="uid://i7admbudl2vt" path="res://Scenes/map_enemy.tscn" id="4_myvm1"]
[ext_resource type="Texture2D" uid="uid://duxunn6pih7j0" path="res://Assets/Sprites/Player/alice idle.png" id="4_w7jjh"]
[ext_resource type="Texture2D" uid="uid://cvehvc8alyy46" path="res://Assets/Sprites/Player/alice walking.png" id="5_6q3n4"]
[ext_resource type="PackedScene" uid="uid://dnrf1f2lj744j" path="res://Scenes/map_obstacle.tscn" id="5_q0mm3"]
[ext_resource type="PackedScene" uid="uid://c1ji347rr0lb8" path="res://Scenes/mute.tscn" id="5_w7jjh"]

[sub_resource type="Animation" id="Animation_p3ir5"]
resource_name = "Cross"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alice:global_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(141, -1133), Vector2(-28, -1158), Vector2(-229, -1162), Vector2(-356, -1087), Vector2(-621, -799)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Alice:crossing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 1.5, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, true, true, true, false]
}

[sub_resource type="Animation" id="Animation_myvm1"]
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alice:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-832, -1929)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Alice:crossing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Alice:global_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-832, -1929)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0mm3"]
_data = {
&"Cross": SubResource("Animation_p3ir5"),
&"RESET": SubResource("Animation_myvm1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3ir5"]
size = Vector2(45.7857, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myvm1"]
size = Vector2(30.9286, 50.7857)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0mm3"]
size = Vector2(600, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_np2xp"]
size = Vector2(20, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26yhd"]
size = Vector2(50, 243)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c2oa"]
atlas = ExtResource("5_6q3n4")
region = Rect2(0, 0, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_olcgw"]
atlas = ExtResource("5_6q3n4")
region = Rect2(1010, 0, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlo4w"]
atlas = ExtResource("5_6q3n4")
region = Rect2(2020, 0, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6lx1"]
atlas = ExtResource("5_6q3n4")
region = Rect2(3030, 0, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qtum"]
atlas = ExtResource("5_6q3n4")
region = Rect2(4040, 0, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie368"]
atlas = ExtResource("5_6q3n4")
region = Rect2(0, 1712, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5dfk"]
atlas = ExtResource("5_6q3n4")
region = Rect2(1010, 1712, 1010, 1712)

[sub_resource type="AtlasTexture" id="AtlasTexture_fls3e"]
atlas = ExtResource("5_6q3n4")
region = Rect2(2020, 1712, 1010, 1712)

[sub_resource type="SpriteFrames" id="SpriteFrames_6q3n4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_w7jjh")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c2oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olcgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlo4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6lx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qtum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie368")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5dfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fls3e")
}],
"loop": true,
"name": &"Walking",
"speed": 10.0
}]

[node name="Map" type="Node2D"]

[node name="background" type="Node2D" parent="."]
position = Vector2(66, -63)
scale = Vector2(7, 7)

[node name="Intersection" type="Node" parent="background"]

[node name="RiverBody" type="StaticBody2D" parent="background"]
z_index = 2
collision_layer = 4
collision_mask = 2

[node name="River" type="CollisionPolygon2D" parent="background/RiverBody"]
polygon = PackedVector2Array(-254.286, -173, -232, -177.571, -163, -191.571, -128.143, -195.714, -103.143, -193, -73.8571, -188.143, -47.4286, -178.714, -29.5714, -168.714, -22.1429, -148.714, 1.28571, -126.143, 36, -91.5714, 53.8571, -78.1429, 66.8571, -69.2857, 104.857, -126.857, 154.286, -143, 230.143, -148.286, 251.429, -82.8571, 246.857, -55.2857, 268.857, -38.1429, 264.429, 19.5714, 222, 2.42857, 212, -74, 217.571, -133.429, 153.143, -129.286, 115, -105.429, 82.7143, -58.8571, 50.5714, -48.2857, 6.85714, -79.5714, -36.2857, -110.143, -49.5714, -132.286, -71.7143, -147.286, -109.143, -153.571, -160.714, -150.571, -242.143, -138.429, -260.429, -132.143, -263.714, -172.857)

[node name="PathBody" type="StaticBody2D" parent="background"]
z_index = 2
position = Vector2(-144.571, -345.571)
collision_layer = 4
collision_mask = 2

[node name="Path" type="CollisionPolygon2D" parent="background/PathBody"]
polygon = PackedVector2Array(7.28529, 44.8567, -10.429, 49.1424, -21.429, 62.571, -25.7147, 81.9996, -14.1433, 100.285, -2.71428, 108.143, 15, 105.714, 27.8571, 98.4286, 43.7143, 92.2857, 54, 98.4286, 76.7143, 103, 103.571, 103.714, 124.143, 100.714, 146.143, 95.1429, 168.143, 85.7143, 183.857, 79.7143, 197.714, 71.5714, 219.857, 70.1429, 239.857, 76.4286, 252.714, 90.1424, 258.714, 101.857, 259, 112.857, 256, 118.285, 248.571, 130.285, 225.428, 148.857, 182.857, 163, 162.142, 167.285, 143.714, 174.571, 114.857, 175.428, 133.571, 169.857, 154.286, 163.429, 193.286, 153.857, 235, 136.143, 242.571, 119.714, 246.571, 109.285, 242.571, 104.857, 233.714, 94.8567, 230.857, 81.4286, 214.571, 78, 195.714, 82.4286, 180, 91.8571, 164.571, 99.1429, 144.286, 108, 120.571, 116.571, 92.7143, 116.143, 67.4286, 115.429, 46.2857, 111.286, 28.1429, 114.286, 9.42857, 121.286, -13.8571, 120.143, -33.4286, 112.286, -45.5714, 98.4286, -57.2857, 82.8571, -63.7143, 61.1429, -65.1429, 40.2857, -57, 14.1429, -36.2857, -4.71429, -18, -14, 22, -17.4286, 60.2857, 3.42856, 67.5714, 36, 130.714, 31.5714, 142.429, 28.8571, 160.143, 26.8571, 187, 19, 212.857, 16.8571, 237, 4.57141, 251.857, -2.71429, 273.857, -8.57144, 289.857, -9, 307.143, -3.71429, 328.571, 2.42856, 345.571, 13.5714, 355, 36.2857, 360, 58.8571, 360.286, 81.4286, 347.143, 104.429, 319.286, 120.429, 325, 154.286, 308.714, 195, 249.571, 210.571, 193.429, 231.286, 167.286, 234.571, 153.429, 221.286, 166.857, 214.286, 213, 203.286, 255.714, 182.429, 285.143, 160.857, 303.857, 124, 305.714, 115.714, 305, 108.143, 302.429, 96.1429, 296.429, 82.8571, 279.857, 62.5714, 258.143, 41.8571, 248.429, 33.2857, 239.429, 25.2857, 229.857, 26.8571, 218.571, 27.5714, 197.143, 26.1429, 171.429, 33.2857, 142.857, 40.1429, 114, 54.7143, 86.2857, 58.4286, 67.1429, 59.2857, 56.2853, 57.1424, 32.4281, 49.1424)

[node name="Path1" type="CollisionPolygon2D" parent="background/PathBody"]
polygon = PackedVector2Array(28.571, 233.142, 5.42857, 247.143, -25.7143, 260, -52.5714, 273.143, -71.2857, 287.571, -89, 305.714, -94, 334, -87.7143, 365.857, -70.2857, 389.143, -41.5714, 401.714, -7, 412.857, 35, 422.286, 72.7143, 424.714, 109.571, 416.285, 150.285, 403.142, 190.571, 394.428, 229.857, 384.142, 270.857, 383.428, 297.714, 399, 316, 426, 325.857, 457, 322.143, 477.286, 298.571, 493.286, 257.571, 492.286, 224.429, 495, 198.714, 496.714, 170.571, 500.571, 146.571, 509.286, 126.571, 531.143, 104.571, 561.571, 69.2853, 542, 33.8567, 528.571, -1, 520.857, -29.5714, 531.571, -49.8571, 559.571, -47.5714, 597.714, -36.8571, 630.857, -13.5714, 651.714, 12.5714, 661.429, 36.5714, 661.714, 63.5714, 664.857, 85.5714, 652, 96.1424, 633, 107.857, 621.714, 117.857, 608.857, 132.286, 622.857, 144.286, 634.429, 166.857, 647.429, 187.143, 660.286, 208.143, 674.714, 230.429, 689.429, 257.143, 691.857, 278, 695.429, 301.857, 706.857, 322.429, 708.286, 340.571, 703.571, 353.286, 692.429, 360.429, 680, 363.143, 664.143, 362.429, 648, 349.286, 636.429, 333.143, 631.714, 317.286, 629.143, 300, 632, 285, 640.857, 277.143, 645.857, 269.286, 652.857, 252.429, 643, 236.286, 637.571, 222.143, 631.429, 210.571, 623.429, 200.143, 614, 189.857, 607.714, 176.429, 601.429, 164.286, 595.429, 156.857, 583.857, 152.857, 572.429, 165.143, 561.714, 178.571, 554.286, 206.429, 546.429, 239.714, 540.286, 272.285, 537.428, 300, 534, 330.285, 527.571, 352, 513.142, 369, 490.285, 374.285, 465.714, 373.857, 444.142, 364.142, 424.571, 351.428, 399.714, 340.428, 385.428, 321.857, 368.571, 285, 351.857, 240.142, 345.428, 250.571, 329.571, 260, 316.714, 277.857, 289.142, 298.857, 283.285, 315.285, 274.142, 316.571, 253.571, 294.285, 250, 278.857, 254.142, 263.714, 261.428, 256.285, 280.571, 229.142, 304.714, 205.285, 325, 162.857, 356, 120.857, 376.429, 82.8567, 386.428, 46.7139, 391.428, 7.42815, 385.285, -20.2861, 377.428, -42.5719, 363.857, -55.1433, 334.142, -46.0004, 308.857, -27.1433, 296.714, -1.28613, 287, 26.7139, 281.428, 49.4281, 267.857, 66.2853, 256.428, 82.4281, 246.428, 98.9996, 235.857, 111.429, 241.571, 120, 253.286, 149.714, 271.286, 162.857, 306.714, 137.143, 336.857, 109.857, 349.571, 76, 360.143, 52, 358.857, -1.42857, 315.286, -31.1429, 331.571, -30.4286, 350.714, -17.2857, 360.143, 15.2857, 368.714, 48.7143, 369.857, 81.7143, 366.714, 121.571, 345.857, 159.143, 343.429, 187.142, 321.428, 199, 296.714, 244.571, 272.429, 254.714, 252, 298.286, 221.714, 354.429, 221.143, 356.143, 350, 361.571, 376.571, 380.429, 403.429, 389.143, 421.714, 393.429, 450.286, 392.714, 479.143, 381.571, 510.714, 357.429, 533.714, 325.857, 549, 292.714, 559.286, 267.429, 557.571, 237.286, 563.143, 208.429, 563.857, 165.857, 570.286, 171.714, 578.714, 183.143, 585.143, 195.286, 594.571, 203.429, 603.286, 211.571, 610.857, 219.571, 618, 234.143, 625.857, 256.857, 635.286, 268, 628.857, 280.143, 623.857, 300.571, 618.571, 321.429, 616.857, 349.714, 621, 372.286, 636.429, 373.286, 658.429, 372.857, 675.286, 369.857, 692, 361.429, 706.143, 346, 717.714, 314.143, 722.429, 293.857, 720.286, 267.857, 713.286, 240.857, 706.857, 190.714, 691.571, 168.857, 666.571, 140.571, 649.857, 124, 628.857, 119, 643.143, 86.7143, 671.286, 58.5714, 679.571, 23.7143, 680.429, -6.57143, 676.857, -38.8571, 661.714, -70.2857, 633.429, -86.2857, 588.857, -80.2857, 535.143, -33.8571, 505.857, 0.857147, 498.714, 44.4286, 505.857, 90.2857, 524.143, 113.571, 509.286, 147.143, 493.714, 171.857, 488.286, 199.143, 482.286, 225.286, 479.286, 266.714, 479.857, 288.714, 479, 296.857, 452.857, 274.857, 416.286, 226, 424, 186, 422.857, 139.143, 438.857, 100.857, 445.571, 54.2857, 450.143, 17, 440.571, -26.2857, 425.429, -58.1429, 411.143, -92.7143, 389.571, -106.571, 361.714, -107, 321, -99, 292.286, -82.4286, 268.857, -63.7143, 256, -30, 234.429, 15.4286, 211.857, 55.571, 199.857, 54.571, 221)

[node name="Path2" type="CollisionPolygon2D" parent="background/PathBody"]
polygon = PackedVector2Array(-4.42857, 570.571, 5.71429, 564.429, 19.2857, 563.571, 38.1429, 567.714, 57.1429, 575.286, 69, 582, 82.1429, 592, 67.1429, 602.714, 55.1429, 610.143, 36.4286, 621.286, 25, 619.571, 12.5714, 612.286, 2.57143, 597.857, -1.57143, 584)

[node name="Bridge" type="AnimationPlayer" parent="background"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_q0mm3")
}
speed_scale = 0.7

[node name="TweenTimer" type="Timer" parent="background/Bridge"]
one_shot = true

[node name="Bridge1" type="Area2D" parent="background"]
z_index = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/Bridge1"]
position = Vector2(-2.17858, -149.571)
shape = SubResource("RectangleShape2D_p3ir5")

[node name="Bridge2" type="Area2D" parent="background"]
z_index = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/Bridge2"]
position = Vector2(-76.9643, -125.464)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_myvm1")

[node name="Borders" type="Node" parent="background"]

[node name="UpperBorder" type="StaticBody2D" parent="background/Borders"]
position = Vector2(66, -2877)
scale = Vector2(7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/Borders/UpperBorder"]
position = Vector2(-0.285714, 1.28568)
shape = SubResource("RectangleShape2D_q0mm3")

[node name="LowerBorder" type="StaticBody2D" parent="background/Borders"]
position = Vector2(66, 2730)
scale = Vector2(7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/Borders/LowerBorder"]
position = Vector2(-0.285714, 1.28568)
shape = SubResource("RectangleShape2D_q0mm3")

[node name="LeftBorder" type="StaticBody2D" parent="background/Borders"]
position = Vector2(-1831, -63)
scale = Vector2(7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/Borders/LeftBorder"]
shape = SubResource("RectangleShape2D_np2xp")

[node name="RightBorder" type="StaticBody2D" parent="background/Borders"]
position = Vector2(1963, -63)
scale = Vector2(7, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/Borders/RightBorder"]
shape = SubResource("RectangleShape2D_np2xp")

[node name="Below" type="Sprite2D" parent="background"]
scale = Vector2(0.191069, 0.195107)
texture = ExtResource("1_q0mm3")

[node name="Above" type="Sprite2D" parent="background"]
z_index = 5
position = Vector2(-0.428571, -4.14286)
scale = Vector2(0.191, 0.195)
texture = ExtResource("2_np2xp")

[node name="Alice" type="CharacterBody2D" parent="."]
z_index = 2
position = Vector2(-832, -1929)
collision_layer = 2
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("2_p3ir5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alice"]
position = Vector2(2, 2.5)
shape = SubResource("RectangleShape2D_26yhd")

[node name="Sprite" type="AnimatedSprite2D" parent="Alice"]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_6q3n4")
animation = &"Idle"
frame_progress = 0.480042

[node name="Camera2D" type="Camera2D" parent="Alice"]
limit_left = -1700
limit_top = -2600
limit_right = 1700
limit_bottom = 2600
editor_draw_limits = true

[node name="Mute" parent="Alice" instance=ExtResource("5_w7jjh")]
offset_left = 613.0
offset_top = -543.0
offset_right = 786.0
offset_bottom = -364.0

[node name="Enemies" type="Node" parent="."]

[node name="White Rabbit" parent="Enemies" node_paths=PackedStringArray("alice") instance=ExtResource("4_myvm1")]
position = Vector2(-43, -1970)
alice = NodePath("../../Alice")

[node name="Mad Hatter" parent="Enemies" node_paths=PackedStringArray("alice") instance=ExtResource("4_myvm1")]
position = Vector2(-938, -540)
index = 1
alice = NodePath("../../Alice")

[node name="Cheshire Cat" parent="Enemies" node_paths=PackedStringArray("alice") instance=ExtResource("4_myvm1")]
position = Vector2(1218, -567)
index = 2
alice = NodePath("../../Alice")

[node name="Jabberwocky" parent="Enemies" node_paths=PackedStringArray("alice") instance=ExtResource("4_myvm1")]
position = Vector2(-1123, 1641)
index = 3
alice = NodePath("../../Alice")

[node name="The Red Queen" parent="Enemies" node_paths=PackedStringArray("alice") instance=ExtResource("4_myvm1")]
position = Vector2(1224, 2257)
index = 4
alice = NodePath("../../Alice")

[node name="Palace Obstacle" parent="." instance=ExtResource("5_q0mm3")]
position = Vector2(327, 1904)
rotation = 2.16608
progressNeeded = 4

[node name="Chesire Cat Obstacle" parent="." instance=ExtResource("5_q0mm3")]
position = Vector2(1446, 446)
rotation = 2.6206
progressNeeded = 3

[connection signal="timeout" from="background/Bridge/TweenTimer" to="Alice" method="_on_bridge_time"]
[connection signal="body_entered" from="background/Bridge1" to="Alice" method="_on_bridge_entered"]
[connection signal="body_entered" from="background/Bridge2" to="Alice" method="_on_bridge2_entered"]
